Fixing color contrast issues across components

--- a/packages/core/src/scss/_color.scss
+++ b/packages/core/src/scss/_color.scss
@@ -69,6 +69,7 @@ In this file:
     --canvas-link: #0066cc;
     --canvas-confirm: #008237;
     --canvas-warn: #e4193c;
+    --canvas-warn: #D31737;
 
     // Subtle Fill Colors
 
